--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ quote-style = "double"
 
 [project]
 name = "battlefront2bot"
-version = "1.1.1a"
+version = "1.1.1b"
 license = "GNU GPL-3.0"
 package-mode = false
 requires-python = ">=3.11,<3.13"
@@ -42,7 +42,8 @@ dependencies = [
     "aiofiles (>=24.1.0,<25.0.0)",
     "uvloop (==0.19.0)",
     "hikari-miru (~=4.2.0)",
-    "Pillow (~=11.3.0)"
+    "Pillow (~=11.3.0)",
+    "openskill (~=6.1.3)"
 ]
 optional-dependencies = { ruff = [ "ruff~=0.9.3" ] }
 
